--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
     <title>Navigateur</title>
 </head>
 
 <body>
-    <script type="text/javascript" src="js/index.js"></script>
+    
+    <script src="./js/index.js"></script>
+    <script src="./js/jquery-1.9.1.min.js"></script>
+    <script src="./js/popper.min.js"></script>
+    <script src="./js/bootstrap.min.js"></script>
+    <script type="module" src="./js/modal.js"></script>
 </body>
 
 </html>
